# TareaCorta

./: CMakeLists.txt  main.cpp
Pizzas/pizzaH/: pizzaH.cpp  pizzaH.h
Pizzas/pizzaJQ/: pizzaJQ.cpp  pizzaJQ.h
Pizzas/pizzaPadre/: pizzaPadre.cpp  pizzaPadre.h
Pizzas/pizzaS/: pizzaS.cpp  pizzaS.h
Pizzas/pizzaV/: pizzaV.cpp  pizzaV.h
